--- a/xzarsk03-contracts-for-concurrency-20-bibliography.bib
+++ b/xzarsk03-contracts-for-concurrency-20-bibliography.bib
@@ -92,7 +92,7 @@
     title = {Fundamentals of Sofware Engineering},
     year = {2003},
     isbn = {0-13-099183-X},
-    publisher = {Pearson Education, International},
+    publisher = {Prentice Hall},
     edition = {2},
     pages = {269-336},
 }
